fix(about us & product)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
     />
     <!-- Css -->
-    <link rel="stylesheet" href="./src/view/styles/index.css" />
+    <link rel="stylesheet" href="./src/styles/index.css" />
+    <link rel="stylesheet" href="./src/styles/product.css"
 </head>
 <body>
     <header id="header">
@@ -34,7 +35,7 @@
     <nav>
         <li><a href="#">Todos os departamentos</a></li>
         <li><a href="#">Lançamentos</a></li>
-        <li><a href="./src/view/pages/about.html">Sobre nós</a></li>
+        <li><a href="./src/pages/about.html">Sobre nós</a></li>
     </nav>
 
     <div class="slide">
@@ -51,25 +52,25 @@
 
     <section>
         <div class="shop-item">
-            <div class="btn-content"><a href="#header">Comprar</a></div>
+            <div class="btn-content"><a href="./src/pages/product.html">Comprar</a></div>
             <img src="./src/img/product.png" alt="Produto">
             <small>Amd Ryzen 5 3600</small>
             <strong>R$ 500,00</strong>
         </div>
         <div class="shop-item">
-            <div class="btn-content"><a href="#header">Comprar</a></div>
+            <div class="btn-content"><a href="./src/pages/product.html">Comprar</a></div>
             <img src="./src/img/product.png" alt="Produto">
             <small>Amd Ryzen 5 3600</small>
             <strong>R$ 500,00</strong>
         </div>
         <div class="shop-item">
-            <div class="btn-content"><a href="#header">Comprar</a></div>
+            <div class="btn-content"><a href="./src/pages/product.html">Comprar</a></div>
             <img src="./src/img/product.png" alt="Produto">
             <small>Amd Ryzen 5 3600</small>
             <strong>R$ 500,00</strong>
         </div>
         <div class="shop-item">
-            <div class="btn-content"><a href="#header">Comprar</a></div>
+            <div class="btn-content"><a href="./src/pages/product.html">Comprar</a></div>
             <img src="./src/img/product.png" alt="Produto">
             <small>Amd Ryzen 5 3600</small>
             <strong>R$ 500,00</strong>
