--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -26,22 +26,22 @@
   </head>
   <body>
     <header id="header">
-        <img id="logo" src="/src/img/logo.png" alt="Logo">
-        <div class="cart">
-            <img src="/src/img/like.png" alt="Produtos curtidos">
-            <img src="/src/img/shopping-cart.png" alt="Carrinho de compras">
-        </div>
+      <img id="logo" src="../img/logo.png" alt="Logo" />
+      <div class="cart">
+        <img src="../img/like.png" alt="Produtos curtidos" />
+        <img src="../img/shopping-cart.png" alt="Carrinho de compras" />
+      </div>
     </header>
 
     <nav>
-      <li><a href="/index.html">Todos os departamentos</a></li>
-        <li><a href="/index.html">Lançamentos</a></li>
-        <li><a href="#">Sobre nós</a></li>
+      <li><a href="../../index.html">Todos os departamentos</a></li>
+      <li><a href="../../index.html">Lançamentos</a></li>
+      <li><a href="#">Sobre nós</a></li>
     </nav>
 
     <main class="mid-content">
       <div>
-        <img class="mid-logo" src="/src/img/dark-logo.png" alt="" />
+        <img class="mid-logo" src="../img/dark-logo.png" alt="" />
         <p>A sua empresa de tecnologia</p>
 
         <div>
@@ -80,29 +80,29 @@
 
         <img
           class="certifications"
-          src="/src/img/google-certification.png"
+          src="../img/google-certification.png"
           alt=""
         />
-        <img class="certifications" src="/src/img/trusted-site.png" alt="" />
+        <img class="certifications" src="../img/trusted-site.png" alt="" />
       </div>
     </main>
 
     <footer>
-        <div class="column">
-            <strong>Fale conosco</strong>
-            <small>+55 (51) 99173-9985</small>
-            <small>+55 (51) 99173-9985</small>
-        </div>
-        <div class="column">
-            <strong>Certificações</strong>
-            <small>Google sites</small>
-            <small>Site blindado</small>
-        </div>
-        <div class="column">
-            <strong>Institucional</strong>
-            <small><a href="./src/view/pages/about.html">Sobre nós</a></small>
-            <small><a href="./src/view/pages/about.html">Trabalhe conosco</a></small>
-        </div>
+      <div class="column">
+        <strong>Fale conosco</strong>
+        <small>+55 (51) 99173-9985</small>
+        <small>+55 (51) 99173-9985</small>
+      </div>
+      <div class="column">
+        <strong>Certificações</strong>
+        <small>Google sites</small>
+        <small>Site blindado</small>
+      </div>
+      <div class="column">
+        <strong>Institucional</strong>
+        <small><a href="./about.html">Sobre nós</a></small>
+        <small><a href="./about.html">Trabalhe conosco</a></small>
+      </div>
     </footer>
   </body>
 </html>
